--- a/qlthuvien/backend/vercel.json
+++ b/qlthuvien/backend/vercel.json
@@ -1,17 +1,8 @@
 {
-    "version" : 2,
-    "builds" : [
-        {
-            "src": "*.js",
-            "use": "@vercel/node"
-        }
-    ],
-    
-        "routes": [
-            {
-                "src": "(/.*)",
-                "dest": "/"
-            }
-        ]
-    
-}
+    "functions": {
+      "api/**/*.js": {
+        "runtime": "node@14"
+      }
+    }
+  }
+  
